[package]
name = "webpub"
version = "0.1.0"
authors = ["Ian Denhardt <ian@zenhack.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.12.0"
capnp-rpc = "0.12.1"
sandstorm = "0.0.11"

lmdb = "0.8.0"

###
futures = "0.3"
mio-uds = "0.6"
futures-tokio-compat = { git = "https://github.com/dwrensha/futures-tokio-compat", branch = "tokio-0.2" }
tokio = { version = "0.2.6", features = ["net", "rt-util", "uds"]}

futures-util = "0.3"
